--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "axios": "^1.8.3",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
